2017-10-30  Michael Catanzaro  <mcatanzaro@igalia.com>

        [WPE] Fix build warnings
        https://bugs.webkit.org/show_bug.cgi?id=178899

        Reviewed by Carlos Alberto Lopez Perez.

        * PlatformWPE.cmake:

2017-10-30  Zan Dobersek  <zdobersek@igalia.com>

        [ARMv7] Fix initial start register support in YarrJIT
        https://bugs.webkit.org/show_bug.cgi?id=178641

        Reviewed by Saam Barati.

        * yarr/YarrJIT.cpp: On ARMv7, use r8 as the initialStart register in the
        YarrGenerator class. r6 should be avoided since it's already used inside
        MacroAssemblerARMv7 as addressTempRegister. r7 isn't picked because it
        can be used as the frame pointer register when targetting ARM Thumb2.

2017-10-30  Zan Dobersek  <zdobersek@igalia.com>

        [ARM64][Linux] Re-enable Gigacage
        https://bugs.webkit.org/show_bug.cgi?id=178130

        Reviewed by Michael Catanzaro.

        Guard the current globaladdr opcode implementation for ARM64 with
        OS(DARWIN) as it's only usable for Mach-O.

        For OS(LINUX), ELF-supported :got: and :got_lo12: relocation specifiers
        have to be used. The .loh directive can't be used as it's not supported
        in GCC or the ld linker.

        On every other OS target, a compilation error is thrown.

        * offlineasm/arm64.rb:

2017-10-27  Devin Rousso  <webkit@devinrousso.com>

        Web Inspector: Canvas Tab: no way to see backtrace of where a canvas context was created
        https://bugs.webkit.org/show_bug.cgi?id=178799
        <rdar://problem/35175805>

        Reviewed by Brian Burg.

        * inspector/protocol/Canvas.json:
        Add optional `backtrace` to Canvas type that is an array of Console.CallFrame.

2017-10-27  Yusuke Suzuki  <utatane.tea@gmail.com>

        [JSC] Tweak ES6 generator function to allow inlining
        https://bugs.webkit.org/show_bug.cgi?id=178935

        Reviewed by Saam Barati.
